Using Bootstrap, added functionality and collapse feature to navbar, bug: CSS file isn't being read, will fix

--- a/music/static/music/style.css
+++ b/music/static/music/style.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Fascinate+Inline');
+
 body{
 	background: white url("images/background2.jpg");
+}
+
+.narbar{
+	border-radius: 0;
+}
+
+.navbar-brand{
+	font-family: 'Fascinate+Inline';
 }
